# test-receipt-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  compose.yaml  justfile  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
app/: config.py  main.py
app/db/: core.py  model_types.py
app/db/migrations/: env.py  script.py.mako
app/db/migrations/versions/: 1732032066_ae95fe21594c_create_user_model.py  1732039937_ec55c18d426d_create_receipt_product_payment_models.py
app/db/models/: __init__.py  base.py  payment.py  product.py  receipt.py  user.py
app/db/queries/: __init__.py  receipt.py  user.py
app/errors/: __init__.py  user.py
app/models/: __init__.py  auth.py  payment.py  product.py  receipt.py  user.py
app/routers/: __init__.py  auth.py  receipts.py  views.py
app/routers/api/: __init__.py  auth.py  receipts.py
app/templates/: receipt.txt  receipt404.txt
app/utils/: format_utils.py  jwt_utils.py  password_utils.py  string_utils.py
