[project]
name = "test-receipt-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.115.5",
  "pydantic-settings>=2.6.1",
  "uvicorn>=0.32.0",
]

[dependency-groups]
dev = ["pre-commit>=4.0.1", "ruff>=0.7.4"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
