[project]
name = "test-receipt-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.5",
  "inflect>=7.4.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.6.1",
  "pydantic[email]>=2.9.2",
  "pyjwt>=2.10.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn>=0.32.0",
]

[dependency-groups]
dev = ["pre-commit>=4.0.1", "ruff>=0.7.4"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["A", "ANN", "B", "D", "E", "F", "I", "N", "UP", "W"]
ignore = ["ANN101", "ANN102", "B904", "D1", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
